# trochia

./: .drone.yml  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  config-example.toml  convert-ghp.py  memo.md  pyproject.toml  view-ghp.html
.github/workflows/: build.yml  ci.yml  release.yml  sanitize.yml  test.yml  tools.yml
examples/: README.md  fetch-engine.sh
examples/astra/: README.md  cd-sensitivity.gp  config-validation.toml  config.toml  fetch-engine.sh  footprints-map.py  footprints.gp  run.sh  validation.gp
examples/landing-dispersion/: README.md  config.toml  plot-map.py  plot.gp
examples/momo/: README.md  altitude.gp  config-tilt-demo.toml  config.toml  momo.eng  run.sh  thrust-sweep.gp  unguided-limit.gp
examples/parachute/: README.md  anim.gp  config-ballistic.toml  config.toml  plot.gp  run.sh
examples/psas-launch12/: README.md  config-dualdeploy.toml  config.toml  fetch-engine.sh  footprints-map.py  footprints.gp  recovery-descent.gp  recovery-map.py  run.sh  trajectory.gp
examples/single-trajectory/: README.md  config.toml  plot.gp
examples/validation-estes-viking/: README.md  config.toml  fetch-engine.sh  plot.gp
src/: config.rs  coordinate.hpp  engine.hpp  environment.hpp  main.cpp  main.rs  math.hpp  object.hpp  object.rs  rocket.hpp  simulation.cpp  simulation.hpp  solver.hpp  version.hpp
src/coordinate/: body.hpp  body.rs  dcm.hpp  dcm.rs  earth.hpp  earth.rs  local.hpp  local.rs  mod.rs
src/environment/: air.hpp  earth.hpp  gravity.hpp  launcher.hpp  mod.rs  physics.hpp  temperature.hpp  wind.hpp
src/environment/earth/: ellipsoid.hpp  ellipsoid.rs  geodesy.hpp  mod.rs
src/io/: config.cpp  config.hpp  csv.hpp
src/rocket/: component.hpp  engine.hpp  engine.rs  mod.rs  rocket.hpp
test/: CMakeLists.txt  coordinate.cpp  environment.cpp  hoge_test.cpp  run_tests.sh  test_air.cpp  test_engine.cpp  test_geodesy.cpp  test_launcher_config.cpp  test_math.cpp  test_object_dynamics.cpp  test_object_init.cpp  test_sim_dynamics.cpp  test_sim_parachute.cpp  test_sim_rail.cpp  test_sim_scenario.cpp  test_sim_stability.cpp  test_wind.cpp
