[package]
name = "trochia"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nalgebra = "0.23.1"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"
